k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tis-app
  labels:
    name: tis-app
    managed-by: argocd
